# opengl_core

./: .gitignore  .ycm_extra_conf.py  Makefile.am  configure.ac  declspec.h  groups  project.config
include/opengl_core/core/: concurrent_queue.h  draw_buffer_config.h  draw_buffer_context.h  draw_buffer_window.h  draw_buffer_window_config.h  fb_config.h  gl_functions.h  gl_utils.h  init.h  non_copyable.h  platform.h  render_context.h  render_system.h  render_window.h  spin_lock.h  standard_renderer.h  symbol_loader.h  win32_hinstance.h  x11_display.h
include/opengl_core/core/cocoa/: cocoa_fb_config_objcxx.h  cocoa_gl_functions_objcxx.h  cocoa_render_context_objcxx.h  cocoa_render_system_objcxx.h  cocoa_render_window_objcxx.h
include/opengl_core/core/x11/: x11_display.h  x11_event_mask.h  x11_extension_checker.h  x11_gl_functions.h
includes/core/: concurrent_queue.h  context.h  extension_checker.h  extension_registry.h  fb_config.h  gl_functions.h  memory_leaks.h  non_copyable.h  platform.h  render_context.h  render_system.h  render_window.h  symbol_loader.h  win32_error_handler.h  win32_hinstance.h  win32_wndproc.h  x11_display.h  x11_event_mask.h
lib/: Makefile.am  draw_buffer_window_config.cpp  posix_symbol_loader.cpp  spin_lock.cpp  x11_display.cpp  x11_gl_functions.cpp  x11_render_system.cpp  x11_render_window.cpp
lib/.deps/: x11_display.Plo
lib/cocoa/: cocoa_fb_config_objcxx.mm  cocoa_gl_functions_objcxx.mm  cocoa_render_context_objcxx.mm  cocoa_render_system_objcxx.mm  cocoa_render_window_objcxx.mm
lib/x11/: x11_display.cpp  x11_draw_buffer_config.cpp  x11_draw_buffer_context.cpp  x11_draw_buffer_window.cpp  x11_extension_checker.cpp  x11_fb_config.cpp  x11_gl_functions.cpp  x11_init.cpp  x11_render_context.cpp  x11_render_system.cpp  x11_render_window.cpp  x11_standard_renderer.cpp
notes/: gl_extensions.notes  glext_h.notes
src/: context.cpp  extension_checker.cpp  extension_registry.cpp  gl_functions.cpp  posix_symbol_loader.cpp  win32_error_handler.cpp  win32_fb_config.cpp  win32_gl_functions.cpp  win32_hinstance.cpp  win32_render_context.cpp  win32_render_system.cpp  win32_render_window.cpp  win32_symbol_loader.cpp  win32_wndproc.cpp  x11_display.cpp  x11_display.lo  x11_extension_registry.cpp  x11_fb_config.cpp  x11_gl_functions.cpp  x11_render_context.cpp  x11_render_system.cpp  x11_render_window.cpp
src/.deps/: x11_display.Plo
tests/: .main.cpp.swp  Makefile.am  check_x11_display.cpp  check_x11_render_system  check_x11_render_system.cpp  main.cpp  suite.cpp  test_fb_config.h  test_render_context.h  test_render_system.h  test_render_window.h  test_win32_fb_config.cpp  test_win32_hinstance..h  test_win32_hinstance.cpp  test_win32_render_context.cpp  test_win32_render_system.cpp  test_win32_render_window.cpp  test_x11_display.cpp  test_x11_display.h  test_x11_fb_config.cpp  test_x11_render_context.cpp  test_x11_render_system.cpp  test_x11_render_window.cpp
tests/.deps/: main.Po
tests/include/: suite.h
tests/win_main/: win_main.cpp  win_main.h
tests/x11/: check_x11_display.cpp
